<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/dishImageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/recipe_pic_height"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/pepperoni" />

            <ImageView
                android:id="@+id/roundedRectangleImageView"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/shadow_rounded_rectangle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/dishNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/recipe_fragment_margin"
            android:fontFamily="@font/autour_one"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="Пицца Пепперони"
            android:textColor="@android:color/primary_text_light"
            android:textSize="@dimen/dish_name_text_size"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/recipe_fragment_margin">

            <TextView
                android:id="@+id/timeAmountTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="90"
                android:textAlignment="center"
                android:textColor="@android:color/primary_text_light"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/portionsAmountTextView"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/portionsAmountTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="5"
                android:textAlignment="center"
                android:textColor="@android:color/primary_text_light"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/timeAmountTextView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/min"
                android:textAlignment="center"
                android:textColor="@android:color/primary_text_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/portionsTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timeAmountTextView" />

            <TextView
                android:id="@+id/portionsTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/portionsText"
                android:textAlignment="center"
                android:textColor="@android:color/primary_text_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/timeTextView"
                app:layout_constraintTop_toBottomOf="@+id/portionsAmountTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/ingredientsStepsTabLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/ingredientsTabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredientsTabHeaderText" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/stepsTabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stepsTabHeaderText" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/ingredientsStepsViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</ScrollView>